# fastapi-utils

./: Makefile  pyproject.toml
.github/workflows/: build.yml  changelog-ci.yml  publish-docs.yml  publish.yml  pull-request.yml
fastapi_utils/: __init__.py  cbv.py
